openvidu-android: remove direct communication with openvidu-server